<resources>
    <string name="app_name">Foodie</string>
    <!-- TODO: Remove or change this placeholder text -->

    <string name="intro_text"> Let’s cook \nbetter food</string>
    <string name="intro_login">Login</string>
    <string name="intro_Sign_Up">Sign Up</string>
    <string name="welcome">Welcome back!</string>
    <string name="enter_account">Please enter your account here</string>
    <string name="enter_your_email_hint">Enter your email</string>

    <string name="password_hint">password</string>
    <string name="don_t_have_an_account">Don’t have an account?</string>
    <string name="blank_fragment">hello_blank_fragment</string>
    <string name="enter_your_info">Please enter your information here</string>
    <string name="birth_date">Birth Date</string>
    <string name="name">Name</string>

    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="all_recipes">All Recipes</string>
    <string name="home">Home</string>
    <string name="search">Search</string>
    <string name="favourites">Favorites</string>
    <string name="profile">Profile</string>

    <string name="email">Email</string>
    <string name="instructions">Instructions</string>
    <string name="ingredients">Ingredients</string>
    <string name="measures">Measures</string>
    <string name="watch_the_full_recipe_here">Watch the full recipe here</string>
    <string name="search_for_meals">Search for meals</string>


    <string name="sign_out">Sign Out</string>
    <string name="about_the_creator">About The Creator</string>
    <string name="your_profile">Your Profile</string>
    <string name="your_personal_information">Your Personal Information</string>
    <string name="find_us_in_linkedin">Find us in LinkedIn</string>
    <string name="work_team">Team</string>
    <string name="hager">Hager\nMatter</string>
    <string name="merna">Merna\nHesham</string>
    <string name="awadeen">Mohammed\nAwadeen</string>
    <string name="ahmed">Ahmed\nElzamany</string>
    <string name="karam">Karam\nIbrahim</string>
    <string name="aziza">Aziza\nHelmy</string>
    <string name="instructors">Instructors</string>
    <string name="Recent_Searches">Recent Searches</string>

    <string name="user_successfully">User logged in successfully</string>
    <string name="user_invalid">Invalid email or password</string>
    <string name="fill_all_fields">Please fill out all fields</string>
    <string name="register_successfully">User registered successfully</string>
    <string name="sign_out_confirmation">Are You Sure You Want To Sign Out?</string>
    <string name="cancel">Cancel</string>

    <string name="signed_out_successfully">Signed out successfully</string>
    <string name="add_to_favourites">Added To Favourites</string>
    <string name="remove_from_favourites">Remove From Favorites</string>
    <string name="remove_from_favourites_confirmation">Are You Sure You Want To Remove This Meal From Favorites ?</string>
    <string name="no">No</string>
    <string name="yes">Yes</string>
    <string name="removed_from_favourites">Removed From Favourites</string>
    <string name="log_in">Log In</string>
    <string name="user_name">User Name</string>
    <string name="country">Country</string>
    <string name="recipe_title">Recipe Title</string>
    <string name="recipe_ingredients">Recipe Ingredients</string>
    <string name="category">Category</string>
    <string name="logoutMessage">Sign out of foodie ?</string>

</resources>