<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/main"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <ImageView
            android:id="@+id/introImage"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_marginStart="-36dp"
            android:layout_marginEnd="-36dp"
            android:importantForAccessibility="no"
            android:src="@drawable/intro_image"
            app:layout_constraintDimensionRatio="160:160"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/introText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/intro_text"
            android:textColor="@color/purple"
            android:textSize="36sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/introImage" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/loginButtonIntroFragment"
            style="@style/purple_Button"
            android:layout_width="0dp"
            android:layout_height="62dp"
            android:layout_marginStart="28dp"
            android:layout_marginTop="24dp"
            android:layout_marginEnd="28dp"
            android:text="@string/intro_login"
            android:textSize="24sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/introText" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/signUpButton"
            style="@style/orange_Button"
            android:layout_width="0dp"
            android:layout_height="62dp"
            android:layout_marginStart="28dp"
            android:layout_marginTop="24dp"
            android:layout_marginEnd="28dp"
            android:text="@string/intro_Sign_Up"
            android:textSize="24sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/loginButtonIntroFragment" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</ScrollView>
