<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background"
    tools:context=".ui.auth.LoginFragment">


    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/fragment_login"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/welcomeText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:gravity="center"
                android:text="@string/welcome"
                android:textColor="@color/purple"
                android:textSize="44sp"
                android:textStyle="bold"
                app:layout_constraintBottom_toTopOf="@id/enterAccount"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/imageView" />

            <TextView
                android:id="@+id/enterAccount"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="18dp"
                android:gravity="center"
                android:text="@string/enter_account"
                android:textSize="18sp"
                app:layout_constraintBottom_toTopOf="@id/emailLogin"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/welcomeText" />

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/emailLogin"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="18dp"
                android:layout_marginTop="24dp"
                android:layout_marginEnd="18dp"
                android:hint="@string/enter_your_email_hint"
                app:boxCornerRadiusBottomEnd="18dp"
                app:boxCornerRadiusBottomStart="18dp"
                app:boxCornerRadiusTopEnd="18dp"

                app:boxCornerRadiusTopStart="18dp"
                app:boxStrokeColor="@color/orange"
                app:hintEnabled="true"
                app:hintTextColor="@color/purple"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/enterAccount"
                app:startIconCheckable="false"
                app:startIconDrawable="@drawable/message"
                tools:ignore="MissingConstraints">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/emailEditTextLoginFragment"
                    android:layout_width="match_parent"
                    android:layout_height="52dp"
                    android:inputType="textEmailAddress"
                    android:paddingStart="40dp"
                    android:textSize="14sp"
                    android:textStyle="bold"
                    tools:ignore="RtlSymmetry" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/passwordLogin"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="18dp"
                android:layout_marginTop="24dp"
                android:layout_marginEnd="18dp"
                android:hint="@string/password_hint"
                app:boxCornerRadiusBottomEnd="18dp"
                app:boxCornerRadiusBottomStart="18dp"
                app:boxCornerRadiusTopEnd="18dp"
                app:boxCornerRadiusTopStart="18dp"
                app:boxStrokeColor="@color/orange"
                app:hintEnabled="true"
                app:hintTextColor="@color/purple"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/emailLogin"
                app:passwordToggleEnabled="true"
                app:startIconCheckable="false"
                app:startIconDrawable="@drawable/lock"
                tools:ignore="MissingConstraints">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/passwordEditTextLoginFragment"
                    android:layout_width="match_parent"
                    android:layout_height="52dp"
                    android:inputType="textPassword"
                    android:paddingStart="40dp"
                    android:textSize="14sp"
                    android:textStyle="bold"
                    tools:ignore="RtlSymmetry" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.button.MaterialButton
                android:id="@+id/loginButtonLoginFragment"
                style="@style/purple_Button"
                android:layout_width="match_parent"
                android:layout_height="62dp"
                android:layout_marginStart="28dp"
                android:layout_marginTop="36dp"
                android:layout_marginEnd="28dp"
                android:text="@string/intro_login"
                android:textSize="24sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/passwordLogin" />

            <TextView
                android:id="@+id/DoNot"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:layout_marginTop="8dp"
                android:layout_marginStart="-48dp"
                android:text="@string/don_t_have_an_account"
                android:textColor="@color/purple"
                android:textSize="16sp"
                android:textStyle="bold"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@id/loginButtonLoginFragment" />

            <TextView
                android:id="@+id/signUpInLoginFragment"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="24dp"
                android:layout_marginStart="8dp"

                android:text="@string/intro_Sign_Up"
                android:textColor="@color/orange"
                android:textSize="16sp"
                android:textStyle="bold"
                app:layout_constraintBaseline_toBaselineOf="@id/DoNot"
                app:layout_constraintStart_toEndOf="@id/DoNot"
                app:layout_constraintTop_toBottomOf="@id/loginButtonLoginFragment" />

            <ImageView
                android:id="@+id/backImg"
                android:layout_width="300dp"
                android:layout_height="300dp"
                android:layout_marginTop="16dp"
                android:src="@drawable/login_back_img"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <ImageView
                android:id="@+id/imageView"
                android:layout_width="250dp"
                android:layout_height="250dp"
                android:layout_marginTop="24dp"
                android:src="@drawable/login_img"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

        </androidx.constraintlayout.widget.ConstraintLayout>
    </ScrollView>


</FrameLayout>
