<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/fragment_profile"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background"
    tools:context=".ui.recipe.ProfileFragment">

    <!-- App Logo -->

    <ImageView
        android:id="@+id/appLogo"
        android:layout_width="202dp"
        android:layout_height="179dp"
        android:layout_marginTop="24dp"
        android:contentDescription="@string/profile"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.157"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/menuIcon"
        android:layout_width="30sp"
        android:layout_height="70dp"
        android:src="@drawable/ic_menu"
        app:layout_constraintBottom_toTopOf="@+id/profileTitle"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.933"
        app:layout_constraintStart_toEndOf="@+id/appLogo"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.014"
        tools:ignore="ContentDescription" />

    <TextView
        android:id="@+id/profileTitle"
        android:layout_width="250dp"
        android:layout_height="60dp"
        android:layout_marginTop="124dp"
        android:text="@string/your_profile"
        android:textColor="@color/purple"
        android:textSize="29sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@id/profileSubtitle"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.639"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/appLogo" />

    <TextView
        android:id="@+id/profileSubtitle"
        android:layout_width="218dp"
        android:layout_height="26dp"
        android:layout_marginTop="12dp"
        android:text="@string/your_personal_information"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.388"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/profileTitle" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/profileName"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="18dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="18dp"
        android:hint="@string/name"
        app:boxCornerRadiusBottomEnd="18dp"
        app:boxCornerRadiusBottomStart="18dp"
        app:boxCornerRadiusTopEnd="18dp"
        app:boxCornerRadiusTopStart="18dp"
        app:boxStrokeColor="@color/orange"
        app:hintEnabled="true"
        app:hintTextColor="@color/purple"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/profileSubtitle"
        app:startIconCheckable="false"
        app:startIconDrawable="@drawable/person">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/profileNameInputEditText"
            android:layout_width="299dp"
            android:layout_height="52dp"
            android:enabled="false"
            android:paddingStart="40dp"
            android:textSize="14sp"
            android:textStyle="bold"
            tools:ignore="RtlSymmetry" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/profileDate"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="18dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="18dp"
        android:hint="@string/birth_date"
        app:boxCornerRadiusBottomEnd="18dp"
        app:boxCornerRadiusBottomStart="18dp"
        app:boxCornerRadiusTopEnd="18dp"
        app:boxCornerRadiusTopStart="18dp"
        app:boxStrokeColor="@color/orange"
        app:hintEnabled="true"
        app:hintTextColor="@color/purple"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/profileName"
        app:startIconCheckable="false"
        app:startIconDrawable="@drawable/calendar_24">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/profileDateInputEditText"
            android:layout_width="305dp"
            android:layout_height="52dp"
            android:enabled="false"
            android:inputType="date"
            android:paddingStart="40dp"
            android:textSize="14sp"
            android:textStyle="bold"
            tools:ignore="RtlSymmetry" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/profileEmail"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"
        android:layout_width="367dp"
        android:layout_height="60dp"
        android:layout_marginStart="18dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="18dp"
        android:hint="@string/email"
        app:boxCornerRadiusBottomEnd="18dp"
        app:boxCornerRadiusBottomStart="18dp"
        app:boxCornerRadiusTopEnd="18dp"
        app:boxCornerRadiusTopStart="18dp"
        app:boxStrokeColor="@color/orange"
        app:hintEnabled="true"
        app:hintTextColor="@color/purple"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/profileDate"
        app:startIconDrawable="@drawable/message">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/profileEmailInputEditText"
            android:layout_width="305dp"
            android:layout_height="52dp"
            android:enabled="false"
            android:paddingStart="40dp"
            android:textSize="14sp"
            android:textStyle="bold"
            tools:ignore="RtlSymmetry" />
    </com.google.android.material.textfield.TextInputLayout>

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_begin="20dp" />

    <androidx.constraintlayout.widget.Barrier
        android:id="@+id/barrier"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:barrierDirection="top"
        app:constraint_referenced_ids="menuIcon" />

</androidx.constraintlayout.widget.ConstraintLayout>
